changes to the HTML

--- a/index.html
+++ b/index.html
@@ -39,26 +39,26 @@
         <h1 class="title">Work</h1>
         <section class="section-container">
             <section id="image1">
-                <img src="C:\Users\Eric\Desktop\MIA Work\Pixabay photos for testing\Work.jpg" alt="" id="image1">
+                <img src="Work.jpg" alt="" id="image1">
 
                 <h3>Web Development</h3>
             </section>
             <section class="card">
-                <img src="C:\Users\Eric\Desktop\MIA Work\Pixabay photos for testing\Wave Report.jpg" alt="">
+                <img src="Wave Report.jpg" alt="">
                 <h3>Wave Report</h3>
             </section>
 
             <section class="card">
-                <img src="C:\Users\Eric\Desktop\MIA Work\Pixabay photos for testing\Fishing Report.jpg" alt="">
+                <img src="Fishing Report.jpg" alt="">
                 <h3>Fishing Report</h3>
             </section>
 
             <section class="card">
-                <img src="C:\Users\Eric\Desktop\MIA Work\Pixabay photos for testing\Weather.jpg" alt="">
+                <img src="Weather.jpg" alt="">
                 <h3>Current Weather</h3>
             </section>
             <section class="card">
-                <img src="C:\Users\Eric\Desktop\MIA Work\Pixabay photos for testing\Run Report.jpg" alt="">
+                <img src="Run Report.jpg" alt="">
                 <h3>Run Report</h3>
             </section>
 
