--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </nav>
     </header>
     <figure>
-        <img src="C:\Users\Eric\Desktop\MIA Work\Pixabay photos for testing\Banner.jpg" width="100%" height="300px"
+        <img src="Banner.jpg" width="100%" height="300px"
             alt="Header Photo">
     </figure>
 
