added link to project 1

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#About Me">About Me</a></li>
                 <li><a href="#Work">Work</a></li>
                 <li><a href="#Contact Me">Contact Me</a></li>
-                <li><a href="c:\Users\Eric\Desktop\Devin Hill's Resume.pdf">Resume</a></li>
+                <li><a href="https://gmarq006.github.io/Project1backup/">Project 1</a></li>
             </ul>
         </nav>
     </header>
