updated for project 2

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a href="#Work">Work</a></li>
                 <li><a href="#Contact Me">Contact Me</a></li>
                 <li><a href="https://gmarq006.github.io/Project1backup/">Project 1</a></li>
+                <li><a href="https://github.com/Devinmarshill/Full-Stack-Project-2"></a></li>
             </ul>
         </nav>
     </header>
@@ -31,7 +32,7 @@
 
         <h1 class="title">About Me</h1>
         <section class="section-container">
-            <p> My name is Devin Hill, I'am 28 and have a 2 year old daughter who is turning 3 on June 29th. I'am from South Florida and do not plan on leaving. I do not have any experience in coding, but hope to use this to help learn a new skill.</p>
+            <p> My name is Devin Hill, I'am 28 and have a 3 year old daughter who is turning 3 on June 29th. I'am from South Florida and do not plan on leaving. I do not have any experience in coding, but hope to use this to help learn a new skill.</p>
         </section>
     </section>
     <section class="left-side" id="work">
